Add README.md file

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -40,7 +40,7 @@
         <div class="row">
             {% for article in articles %}
             <div class="col-lg-4 mt-3">
-                <div class="card" style="width: 22rem;">
+                <div class="card mb-5" style="width: 22rem;">
                     <div class="card-body">
                         <h5 class="card-title">{{ article.title }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ article.category }}</h6>
